@@ -2,6 +2,7 @@
 parts =
     zopepy
     test
+    test-cmf
     coverage-report
     coverage-test
 
@@ -18,17 +19,20 @@ scripts = zopepy
 [test]
 recipe = zc.recipe.testrunner
 eggs = ${buildout:eggs}
+defaults = ['-s', 'plone.reload']
 
-defaults = ['--exit-with-status']
+[test-cmf]
+recipe = zc.recipe.testrunner
+eggs = plone.reload [cmf]
+defaults = ['-s', 'plone.reload']
 
 [coverage-test]
 recipe = zc.recipe.testrunner
-eggs = ${test:eggs}
-defaults = ['--coverage', '../../coverage', '-v', '--auto-progress']
+eggs = ${test-cmf:eggs}
+defaults = ['--coverage', '../../coverage']
 
 [coverage-report]
 recipe = zc.recipe.egg
 eggs = z3c.coverage
 scripts = coverage=coverage-report
 arguments = ('coverage', 'report')
-
